add Chinese i18n file

--- a/i18n/locales/zh-cn.json
+++ b/i18n/locales/zh-cn.json
@@ -115,7 +115,7 @@
         "links": {
           "getInvolved": "参与贡献",
           "collabSummit": "协作者峰会",
-          "upcomingEvents": "Upcoming Events",
+          "upcomingEvents": "近期活动",
           "contribute": "贡献 Node.js",
           "codeOfConduct": "行为准则"
         }
