--- a/pages/en/download/index.mdx
+++ b/pages/en/download/index.mdx
@@ -13,7 +13,7 @@ subtitle: Download Node.js the way you want.
 <section>
 Node.js includes <LinkWithArrow href="https://npmjs.com">npm</LinkWithArrow> (<Release.NpmVersion />) and corepack.
 
-Read the changelog for <Release.ChangelogLink>this verion</Release.ChangelogLink>
+Read the changelog for <Release.ChangelogLink>this version</Release.ChangelogLink>
 
 Read the blog post for <Release.BlogPostLink>this version</Release.BlogPostLink>
 
