Fix/aria label is missing (#6417)
* feat: added the aria-lable for the RSS link

* feat: added the translation key for RSS link in blogHeader

* fix: add subtitles directly to aria-label

* fix: renamed i18n keys and updated en.json

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -216,6 +216,12 @@
       "searchPage": {
         "title": "You're searching: {query}"
       }
+    },
+    "blog": {
+      "blogHeader": {
+        "subtitle": "The latest Node.js news, case studies, tutorials, and resources.",
+        "rssLink": "RSS feed"
+      }
     }
   },
   "layouts": {
@@ -229,7 +235,6 @@
     },
     "blog": {
       "title": "Blog",
-      "subtitle": "The latest Node.js news, case studies, tutorials, and resources.",
       "selectCategory": "Categories",
       "categories": {
         "all": "Everything",
