chore(branding): introduce branding page

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -103,6 +103,7 @@
         "links": {
           "about": "About Node.js",
           "aboutSide": "About Node.js®",
+          "branding": "Branding of Node.js",
           "governance": "Project Governance",
           "releases": "Previous Releases",
           "security": "Security Reporting"
