use table instead of line per line

--- a/pages/en/about/branding.mdx
+++ b/pages/en/about/branding.mdx
@@ -19,54 +19,76 @@ Please review the [trademark policy](https://trademark-policy.openjsf.org/) for 
 
 ### Node.js® Horizontal Logo
 
-<img
-  alt="Node.js Dark Horizontal Logo"
-  src="/static/logos/nodejsDark.svg"
-  className="w-[200px]"
-/>
-
-<img
-  alt="Node.js Light Horizontal Logo"
-  src="/static/logos/nodejsLight.svg"
-  className="w-[200px] rounded bg-neutral-950 p-2 dark:bg-transparent"
-/>
+<table>
+  <tr>
+    <td>
+      <img
+        alt="Node.js Dark Horizontal Logo"
+        src="/static/logos/nodejsDark.svg"
+      />
+    </td>
+    <td>
+      <img
+        alt="Node.js Light Horizontal Logo"
+        src="/static/logos/nodejsLight.svg"
+        className="bg-neutral-950 p-2 dark:bg-transparent"
+      />
+    </td>
+  </tr>
+</table>
 
 ### Node.js® Stacked Logo
 
-<img
-  alt="Node.js Dark Stacked Logo"
-  src="/static/logos/nodejsStackedDark.svg"
-  className="w-[200px]"
-/>
-
-<img
-  alt="Node.js Light Stacked Logo"
-  src="/static/logos/nodejsStackedLight.svg"
-  className="w-[200px] rounded bg-neutral-950 p-2 dark:bg-transparent"
-/>
-
-<img
-  alt="Node.js Black Stacked Logo"
-  src="/static/logos/nodejsStackedBlack.svg"
-  className="w-[200px]"
-/>
-
-<img
-  alt="Node.js White Stacked Logo"
-  src="/static/logos/nodejsStackedWhite.svg"
-  className="w-[200px] rounded bg-neutral-950 p-2 dark:bg-transparent"
-/>
+<table>
+  <tr>
+    <td>
+      <img
+        alt="Node.js Dark Stacked Logo"
+        src="/static/logos/nodejsStackedDark.svg"
+      />
+    </td>
+    <td>
+      <img
+        alt="Node.js Light Stacked Logo"
+        src="/static/logos/nodejsStackedLight.svg"
+        className="rounded bg-neutral-950 p-2 dark:bg-transparent"
+      />
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <img
+        alt="Node.js Black Stacked Logo"
+        src="/static/logos/nodejsStackedBlack.svg"
+      />
+    </td>
+    <td>
+      <img
+        alt="Node.js White Stacked Logo"
+        src="/static/logos/nodejsStackedWhite.svg"
+        className="rounded bg-neutral-950 p-2 dark:bg-transparent"
+      />
+    </td>
+  </tr>
+</table>
 
 ### JS Icons
 
-<img
-  alt="JS Icons Green"
-  src="/static/logos/jsIconGreen.svg"
-  className="w-[100px]"
-/>
-
-<img
-  alt="White JS Icons"
-  src="/static/logos/jsIconWhite.svg"
-  className="w-[100px] rounded bg-neutral-950 p-2 dark:bg-transparent"
-/>
+<table>
+  <tr>
+    <td>
+      <img
+        alt="JS Icons Green"
+        src="/static/logos/jsIconGreen.svg"
+        className="mx-auto"
+      />
+    </td>
+    <td>
+      <img
+        alt="White JS Icons"
+        src="/static/logos/jsIconWhite.svg"
+        className="mx-auto rounded bg-neutral-950 p-2 dark:bg-transparent"
+      />
+    </td>
+  </tr>
+</table>
