meta: enable french translations
Signed-off-by: Claudio W <cwunder@gnome.org>

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -56,7 +56,7 @@
     "langDir": "ltr",
     "dateFormat": "DD.MM.YYYY",
     "hrefLang": "fr",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
