--- a/pages/en/about/branding.mdx
+++ b/pages/en/about/branding.mdx
@@ -13,6 +13,8 @@ Please review the [trademark policy](https://trademark-policy.openjsf.org/) for 
   alt="Node.js mascot"
   src="/static/images/node-mascot.svg"
   className="w-[100px]"
+  width="100"
+  height="114"
 />
 
 ## Node.js® Logo
@@ -25,13 +27,18 @@ Please review the [trademark policy](https://trademark-policy.openjsf.org/) for 
       <img
         alt="Node.js Dark Horizontal Logo"
         src="/static/logos/nodejsDark.svg"
+        className="h-[80px] w-[267px]"
+        width="267"
+        height="80"
       />
     </td>
     <td>
       <img
         alt="Node.js Light Horizontal Logo"
         src="/static/logos/nodejsLight.svg"
-        className="bg-neutral-950 p-2 dark:bg-transparent"
+        className="h-[80px] w-[267px] bg-neutral-950 p-2 dark:bg-transparent"
+        width="267"
+        height="80"
       />
     </td>
   </tr>
@@ -45,13 +52,18 @@ Please review the [trademark policy](https://trademark-policy.openjsf.org/) for 
       <img
         alt="Node.js Dark Stacked Logo"
         src="/static/logos/nodejsStackedDark.svg"
+        className="h-[164px] w-[267px]"
+        width="267"
+        height="164"
       />
     </td>
     <td>
       <img
         alt="Node.js Light Stacked Logo"
         src="/static/logos/nodejsStackedLight.svg"
-        className="rounded bg-neutral-950 p-2 dark:bg-transparent"
+        className="h-[164px] w-[267px] rounded bg-neutral-950 p-2 dark:bg-transparent"
+        width="267"
+        height="164"
       />
     </td>
   </tr>
@@ -80,14 +92,18 @@ Please review the [trademark policy](https://trademark-policy.openjsf.org/) for 
       <img
         alt="JS Icons Green"
         src="/static/logos/jsIconGreen.svg"
-        className="mx-auto"
+        className="height-[80px] mx-auto w-[71px]"
+        width="71"
+        height="80"
       />
     </td>
     <td>
       <img
         alt="White JS Icons"
         src="/static/logos/jsIconWhite.svg"
-        className="mx-auto rounded bg-neutral-950 p-2 dark:bg-transparent"
+        className="height-[80px] mx-auto w-[71px] rounded bg-neutral-950 p-2 dark:bg-transparent"
+        width="71"
+        height="80"
       />
     </td>
   </tr>
