feat: next/image added into the mdx components

--- a/pages/en/about/index.mdx
+++ b/pages/en/about/index.mdx
@@ -4,10 +4,11 @@ layout: about
 ---
 
 <div className="my-4 flex items-center justify-center">
-  <img
+  <Image
     alt="Node.js mascot"
     src="/static/images/node-mascot.svg"
-    className="w-[100px]"
+    width={100}
+    height={114.7}
   />
 </div>
 
