refactor: Image moved into the html components

--- a/pages/en/about/index.mdx
+++ b/pages/en/about/index.mdx
@@ -4,12 +4,14 @@ layout: about
 ---
 
 <div className="my-4 flex items-center justify-center">
-  <Image
-    alt="Node.js mascot"
-    src="/static/images/node-mascot.svg"
-    width={100}
-    height={114.7}
-  />
+  {
+    <img
+      alt="Node.js mascot"
+      src="/static/images/node-mascot.svg"
+      width={100}
+      height={114.7}
+    />
+  }
 </div>
 
 ---
