--- a/pages/en/download/prebuilt-binaries/current.mdx
+++ b/pages/en/download/prebuilt-binaries/current.mdx
@@ -11,7 +11,7 @@ I want the <Release.VersionDropdown /> version of Node.js for <Release.Operating
 </section>
 
 <section>
-Node.js includes <LinkWithArrow href="https://npmjs.com">npm</LinkWithArrow> (<Release.NpmVersion />) and corepack.
+Node.js includes <Release.NpmLink /> and corepack.
 
 Read the blog post for <Release.BlogPostLink>this version</Release.BlogPostLink>
 
