feat: turtle surfin

--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -40,6 +40,10 @@ layout: home
   </div>
 </section>
 
+<div className="turtle">
+  <img src="/static/images/node-mascot.svg" alt="turtle roocket logo" />
+</div>
+
 <section>
   <div>
     ```js displayName="Create an HTTP Server"
