chore: Rename "Read streams" example to "Streams Pipeline"
Signed-off-by: Luciano Mammino <lucianomammino@gmail.com>

--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -93,7 +93,7 @@ layout: home
     // run with `node crypto.mjs`
     ```
 
-    ```js displayName="Read Streams"
+    ```js displayName="Streams pipeline"
     // streams.mjs
     import { pipeline } from 'node:stream';
     import { createReadStream, createWriteStream } from 'node:fs';
