--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -93,7 +93,7 @@ layout: home
     // run with `node crypto.mjs`
     ```
 
-    ```js displayName="Streams pipeline"
+    ```js displayName="Streams Pipeline"
     // streams.mjs
     import { pipeline } from 'node:stream';
     import { createReadStream, createWriteStream } from 'node:fs';
