--- a/i18n/config.json
+++ b/i18n/config.json
@@ -120,6 +120,15 @@
     "default": false
   },
   {
+    "code": "ro",
+    "localName": "Română",
+    "name": "Romanian",
+    "langDir": "ltr",
+    "dateFormat": "DD-MM-YYYY",
+    "hrefLang": "ro",
+    "enabled": false
+  },
+  {
     "code": "ru",
     "localName": "Русский",
     "name": "Russian",
