--- a/pages/en/about/index.mdx
+++ b/pages/en/about/index.mdx
@@ -78,7 +78,7 @@ communicate with. Built upon that same interface is the [`cluster`][] module,
 which allows you to share sockets between processes to enable load balancing
 over your cores.
 
-[blocking vs. non-blocking]: /learn/asynchronous-work/overview-of-blocking-vs-non-blocking
+[blocking vs. non-blocking]: /pages/en/learn/asynchronous-work/overview-of-blocking-vs-non-blocking.md
 [`child_process.fork()`]: https://nodejs.org/api/child_process.html
 [`cluster`]: https://nodejs.org/api/cluster.html
 [event machine]: https://github.com/eventmachine/eventmachine
