--- a/i18n/config.json
+++ b/i18n/config.json
@@ -168,5 +168,15 @@
     "hrefLang": "zh-Hant",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "bn",
+    "localName": "বাংলা",
+    "name": "Bengali",
+    "langDir": "ltr",
+    "dateFormat": "DD.MM.YYYY",
+    "hrefLang": "bn",
+    "enabled": false,
+    "default": false
   }
 ]
