Bug Fix: Missing key:branding in zh-cn.json components.navigation.about.branding

--- a/i18n/locales/zh-cn.json
+++ b/i18n/locales/zh-cn.json
@@ -103,6 +103,7 @@
         "links": {
           "about": "关于 Node.js",
           "aboutSide": "关于 Node.js®",
+          "branding": "Node.js 品牌指引",
           "governance": "项目治理",
           "releases": "以前的版本",
           "security": "安全报告"
