--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -112,8 +112,12 @@ layout: home
 
     ```js displayName="Work with Threads"
     // threads.mjs
-    import { Worker, isMainThread,
-      workerData, parentPort } from 'node:worker_threads';
+    import { 
+      Worker,
+      isMainThread,
+      workerData,
+      parentPort 
+    } from 'node:worker_threads';
 
     if (isMainThread) {
       const data = 'some data';
@@ -121,7 +125,9 @@ layout: home
       worker.on('message', msg => console.log('Reply from Thread:', msg));
     } else {
       const source = workerData;
-      parentPort.postMessage(btoa(source.toUpperCase()));
+      parentPort.postMessage(
+        Buffer.from(source.toUpperCase()).toString("base64")
+      );
     }
 
     // run with `node threads.mjs`
