Added Romanian locale (#6496)
* chore(i18n): Romanian language added in the locale config file

* chore(i18n): Romanian locale file created

* fix: Removed ro.json file manually created

* Update config.json

Signed-off-by: Claudio W <cwunder@gnome.org>

---------

Signed-off-by: Claudio W <cwunder@gnome.org>
Co-authored-by: Claudio W <cwunder@gnome.org>

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -120,6 +120,16 @@
     "default": false
   },
   {
+    "code": "ro",
+    "localName": "Română",
+    "name": "Romanian",
+    "langDir": "ltr",
+    "dateFormat": "DD-MM-YYYY",
+    "hrefLang": "ro",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "ru",
     "localName": "Русский",
     "name": "Russian",
