chore(i18n): add Dutch language in locale config.json

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -188,5 +188,15 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "nl",
+    "localName": "Nederlands",
+    "name": "Dutch",
+    "langDir": "ltr",
+    "dateFormat": "DD-MM-YYYY",
+    "hrefLang": "nl",
+    "enabled": false,
+    "default": false
   }
 ]
