--- a/i18n/config.json
+++ b/i18n/config.json
@@ -188,5 +188,45 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "sv",
+    "localName": "Svenska",
+    "name": "Swedish",
+    "langDir": "ltr",
+    "dateFormat": "YYYY-MM-DD",
+    "hrefLang": "sv",
+    "enabled": false,
+    "default": false
+  },
+  {
+    "code": "fi",
+    "localName": "Suomi",
+    "name": "Finnish",
+    "langDir": "ltr",
+    "dateFormat": "DD.MM.YYYY",
+    "hrefLang": "fi",
+    "enabled": false,
+    "default": false
+  },
+  {
+    "code": "nl",
+    "localName": "Nederlands",
+    "name": "Dutch",
+    "langDir": "ltr",
+    "dateFormat": "DD-MM-YYYY",
+    "hrefLang": "nl",
+    "enabled": false,
+    "default": false
+  },
+  {
+    "code": "hi",
+    "localName": "हिन्दी",
+    "name": "Hindi",
+    "langDir": "ltr",
+    "dateFormat": "DD/MM/YYYY",
+    "hrefLang": "hi",
+    "enabled": false,
+    "default": false
   }
 ]
