--- a/i18n/config.json
+++ b/i18n/config.json
@@ -188,5 +188,15 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "mn",
+    "localName": "Монгол",
+    "name": "Mongolian",
+    "langDir": "ltr",
+    "dateFormat": "YYYY.MM.DD",
+    "hrefLang": "mn",
+    "enabled": false,
+    "default": false
   }
 ]
