added greek language config
Signed-off-by: Savvas Mantzouranidis <mohito6@hotmail.com>

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -188,5 +188,15 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "el",
+    "localName": "Ελληνικά",
+    "name": "Greek",
+    "langDir": "ltr",
+    "dateFormat": "DD/MM/YYYY",
+    "hrefLang": "el-GR",
+    "enabled": false,
+    "default": false
   }
 ]
