feat: introduced changelog modal on downloads (#6393)
* refactor: separate client and server/complex components

* feat: add changelog data to release data

* chore: add client components to mdx intrinsic types

* feat: introduced new changelog modal components with client-side rendering

* chore: updated pages with the changelog modal button

* chore: fix unit tests bad import

* Apply suggestions from code review

Co-authored-by: Michael Esteban <mickel13@gmail.com>
Signed-off-by: Claudio W <cwunder@gnome.org>

* refactor: changelog removed from release and moved to a different endpoint

* fix: generateStaticParams provides version

* refactor: review updates

* fix: changelog trigger accessibility

---------

Signed-off-by: Claudio W <cwunder@gnome.org>
Co-authored-by: Michael Esteban <mickel13@gmail.com>
Co-authored-by: Caner Akdas <canerakdas@gmail.com>

--- a/pages/en/download/package-manager/index.mdx
+++ b/pages/en/download/package-manager/index.mdx
@@ -13,6 +13,8 @@ Install Node.js <Release.VersionDropdown /> on <Release.OperatingSystemDropdown 
 <section>
 Node.js includes <Release.NpmLink />.
 
+Read the changelog for <Release.ChangelogLink>this version</Release.ChangelogLink>
+
 Read the blog post for <Release.BlogPostLink>this version</Release.BlogPostLink>
 
 Learn how to <Release.VerifyingBinariesLink>verify signed SHASUMS</Release.VerifyingBinariesLink>
