chore: Added urdu language config

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -188,5 +188,15 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "ur",
+    "localName": "اردو",
+    "name": "Urdu",
+    "langDir": "rtl",
+    "dateFormat": "DD/MM/YYYY",
+    "hrefLang": "ur",
+    "enabled": true,
+    "default": false
   }
 ]
