chore: add Uzbek lang to locales

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -188,5 +188,15 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },  
+  {
+    "code": "uz",
+    "localName": "O'zbek",
+    "name": "Uzbek",
+    "langDir": "ltr",
+    "dateFormat": "DD/MM/YYYY",
+    "hrefLang": "uz",
+    "enabled": false,
+    "default": false
   }
 ]
