fix: Set urdu default false

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -196,7 +196,7 @@
     "langDir": "rtl",
     "dateFormat": "DD/MM/YYYY",
     "hrefLang": "ur",
-    "enabled": true,
+    "enabled": false,
     "default": false
   }
 ]
