--- a/i18n/config.json
+++ b/i18n/config.json
@@ -66,7 +66,7 @@
     "langDir": "ltr",
     "dateFormat": "DD/MM/YYYY",
     "hrefLang": "hi",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
