Add missing os from website redesign
Refs: https://github.com/nodejs/nodejs.org/issues/6479

Adds back the ability to download Node.js binaries for AIX

Signed-off-by: Michael Dawson <midawson@redhat.com>

--- a/pages/en/download/current.mdx
+++ b/pages/en/download/current.mdx
@@ -5,7 +5,7 @@ subtitle: Download Node.js the way you want.
 ---
 
 <section>
-I want the <Release.VersionDropdown /> version of Node.js for <Release.OperatingSystemDropdown exclude={["LINUX"]} /> running <Release.BitnessDropdown />
+I want the <Release.VersionDropdown /> version of Node.js for <Release.OperatingSystemDropdown exclude={["LINUX", "AIX"]} /> running <Release.BitnessDropdown />
 
 <Release.DownloadButton kind={"installer"} />
 </section>
