--- a/pages/en/download/package-manager/current.mdx
+++ b/pages/en/download/package-manager/current.mdx
@@ -5,7 +5,7 @@ subtitle: Download Node.js the way you want.
 ---
 
 <section>
-Install Node.js <Release.VersionDropdown /> on  <Release.OperatingSystemDropdown /> using <Release.PlatformDropdown />
+Install Node.js <Release.VersionDropdown /> on  <Release.OperatingSystemDropdown exclude={["AIX"]} /> using <Release.PlatformDropdown />
 
 <Release.ReleaseCodeBox />
 </section>
