--- a/pages/en/download/index.mdx
+++ b/pages/en/download/index.mdx
@@ -5,7 +5,7 @@ subtitle: Download Node.js the way you want.
 ---
 
 <section>
-I want the <Release.VersionDropdown /> version of Node.js for <Release.OperatingSystemDropdown exclude={["LINUX"]} /> running <Release.BitnessDropdown />
+I want the <Release.VersionDropdown /> version of Node.js for <Release.OperatingSystemDropdown exclude={["LINUX", "AIX"]} /> running <Release.BitnessDropdown />
 
 <Release.DownloadButton kind={"installer"} />
 </section>
