locale: add hebrew support

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -188,5 +188,15 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "he",
+    "localName": "עִברִית",
+    "name": "Hebrew",
+    "langDir": "rtl",
+    "dateFormat": "DD-MM-YYYY",
+    "hrefLang": "he",
+    "enabled": false,
+    "default": false
   }
 ]
