fix: properly tag maintenance and flag versions correctly

--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -28,7 +28,7 @@ layout: home
         </>
       )}
     </WithNodeRelease>
-    <WithNodeRelease status={"Current"}>
+    <WithNodeRelease status={["Current", "Maintenance"]}>
       {({ release }) => (
         <small>
           Want new features sooner?
