--- a/i18n/config.json
+++ b/i18n/config.json
@@ -10,6 +10,15 @@
     "default": false
   },
   {
+    "code": "bn",
+    "localName": "বাংলা",
+    "name": "Bengali",
+    "langDir": "ltr",
+    "dateFormat": "DD.MM.YYYY",
+    "hrefLang": "bn",
+    "enabled": false
+  },
+  {
     "code": "de",
     "localName": "Deutsch",
     "name": "German",
