fix: collaborator summit -> collaboration summit
This is the more correct term for the event.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -112,7 +112,7 @@
       "getInvolved": {
         "links": {
           "getInvolved": "Get Involved",
-          "collabSummit": "Collaborator Summit",
+          "collabSummit": "Collaboration Summit",
           "upcomingEvents": "Upcoming Events",
           "contribute": "Contribute to Node.js",
           "codeOfConduct": "Code of Conduct"
