feat(locale): add fa locale and related font

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -46,7 +46,7 @@
     "langDir": "rtl",
     "dateFormat": "YYYY/MM/DD",
     "hrefLang": "fa",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
