feat(content): Update previous-releases.mdx to rename to Node.js releases
Signed-off-by: Steven R. Loomis <srl295@gmail.com>

--- a/pages/en/about/previous-releases.mdx
+++ b/pages/en/about/previous-releases.mdx
@@ -1,9 +1,9 @@
 ---
-title: Previous Releases
+title: Node.js Releases
 layout: about
 ---
 
-# Previous Releases
+# Node.js Releases
 
 Major Node.js versions enter _Current_ release status for six months, which gives library authors time to add support for them.
 After six months, odd-numbered releases (9, 11, etc.) become unsupported, and even-numbered releases (10, 12, etc.) move to _Active LTS_ status and are ready for general use.
