--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -105,7 +105,7 @@
           "aboutSide": "About Node.js®",
           "branding": "Branding of Node.js",
           "governance": "Project Governance",
-          "releases": "Previous Releases",
+          "releases": "Node.js Releases",
           "security": "Security Reporting"
         }
       },
@@ -121,7 +121,7 @@
     },
     "downloadList": {
       "links": {
-        "previousReleases": "Previous Releases",
+        "previousReleases": "Node.js Releases",
         "packageManager": "Installing Node.js via package manager",
         "shaSums": {
           "title": "Signed SHASUMS for release files",
