feat(content): link to Node.js releases page from Download pages

--- a/pages/en/download/current.mdx
+++ b/pages/en/download/current.mdx
@@ -21,4 +21,6 @@ Learn how to <Release.VerifyingBinariesLink>verify signed SHASUMS</Release.Verif
 
 Check out all available Node.js <LinkWithArrow href="https://nodejs.org/dist/">download options</LinkWithArrow>
 
+Learn about <LinkWithArrow href="about/previous-releases">Node.js Releases</LinkWithArrow>
+
 </section>
