feat: package-managers as default, redirects and more info

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -268,7 +268,7 @@
     "download": {
       "selectCategory": "Categories",
       "categories": {
-        "download": "Prebuilt Installer",
+        "prebuilt-installer": "Prebuilt Installer",
         "prebuilt-binaries": "Prebuilt Binaries",
         "package-manager": "Package Manager",
         "source-code": "Source Code"
@@ -284,8 +284,9 @@
         "platform": "Platform"
       },
       "codeBox": {
-        "managerInstalled": "Please ensure you have the right package manager installed before running a script.",
-        "communityWarning": "Package managers and their installation scripts are not maintained by the Node.js project."
+        "systemManagerWarning": "is not a Node.js package manager. Please ensure you already have {packageManager} installed.",
+        "communityWarning": "Package managers and their installation scripts are not maintained by the Node.js project.",
+        "communityWarningReport": "If you encounter issues, please reach out to the package manager's maintainers."
       }
     }
   }
