--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -49,8 +49,8 @@
             "asynchronousFlowControl": "Asynchronous flow control",
             "overviewOfBlockingVsNonBlocking": "Overview of Blocking vs Non-Blocking",
             "javascriptAsynchronousProgrammingAndCallbacks": "JavaScript Asynchronous Programming and Callbacks",
-            "discoverJavaScriptTimers": "Discover JavaScript Timers",
-            "theNodejsEventLoop": "The Node.js Event Loop",
+            "discoverJavascriptTimers": "Discover JavaScript Timers",
+            "eventLoopTimersAndNexttick": "The Node.js Event Loop",
             "theNodejsEventEmitter": "The Node.js Event Emitter",
             "understandingProcessnexttick": "Understanding process.nextTick()",
             "understandingSetimmediate": "Understanding setImmediate()",
@@ -66,7 +66,7 @@
             "readingFilesWithNodejs": "Reading files with Node.js",
             "writingFilesWithNodejs": "Writing files with Node.js",
             "workingWithFoldersInNodejs": "Working with folders in Node.js",
-            "howToWorkWithFileSystems": "How to work with Different Filesystems"
+            "workingWithDifferentFilesystems": "How to work with Different Filesystems"
           }
         },
         "commandLine": {
