--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -102,7 +102,7 @@
           "links": {
             "testRunner": "Test Runner",
             "introduction": "Discovering Node.js's test runner",
-            "usingTesRunner": "Using Node.js's test runner"
+            "usingTestRunner": "Using Node.js's test runner"
           }
         }
       },
